[tool.poetry]
name = "djlexique"
version = "0.1.0"
description = "Un lexique simple à utiliser"
authors = ["Jimmy Girardet <ijkl@netc.fr>"]
license = "GPL3"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.7"
django-dotenv = "^1.4.2"
django-htmx = "^1.3.0"
whitenoise = "^5.3.0"
django-login-required-middleware = "^0.6.3"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
django-stubs = "^1.9.0"
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
