[tool.poetry]
name = "djlexique"
version = "1.2.0"
description = "Un lexique simple à utiliser"
authors = ["Jimmy Girardet <ijkl@netc.fr>"]
license = "GPL3"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.7"
django-dotenv = "^1.4.2"
django-login-required-middleware = "^0.6.3"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
django-stubs = "^1.9.0"
pre-commit = "^2.15.0"
pylint = "^2.12.2"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
